--- a/index.htm
+++ b/index.htm
@@ -142,13 +142,35 @@ a.label {
 				<div class="more description">
 					<ul>
 						<li>By <a href="https://twitter.com/moebio">Santiago Ortiz</a>.</li>
-						<li><a href="http://moebio.com/research/wikipediagender/">http://moebio.com/research/wikipediagender/</a>.</li></li>
+						<li><a href="http://moebio.com/research/wikipediagender/">http://moebio.com/research/wikipediagender/</a></li>
 					</ul>
 				</div>
 			</div>
 		
 		</div>
-		</a>
+		<div  class="item">
+			
+			<div class="image">
+				<a class="like ui corner label" href="http://wikistream.wmflabs.org/">
+					<i class="mail forward icon"></i>
+				</a>
+				<img src="viz/wikistream.png">
+			</div>
+			<div class="content">
+				<div class="name">wikistream</div>
+				<p class="description">"Wikistream is a Node.js webapp for helping visualize current editing activity in Wikipedia. It uses Node.js, socket.io and Redis to sit in the wikimedia IRC chat rooms (where updates are published), and makes them available on the Web in realtime. "</p>
+
+				<div class="more description">
+					<ul>
+						<li>By <a href="https://twitter.com/edsu">Ed Summers</a>, <a href="https://twitter.com/mrdys">Sean Hannan</a>, <a href="https://twitter.com/notafish">Delphine Ménard</a>.</li>
+						<li>Source: <a href="https://github.com/edsu/wikistream">https://github.com/edsu/wikistream</a></li>
+						<li><a href="http://wikistream.wmflabs.org/">http://wikistream.wmflabs.org/</a></li>
+					</ul>
+				</div>
+			</div>
+		
+		</div>
+		
 	</div>
 	<div class="ui clearing"></div>
 	
