--- a/index.htm
+++ b/index.htm
@@ -156,7 +156,6 @@ a.label {
 		
 		</div>
 		<div  class="item">
-			
 			<div class="image">
 				<a class="like ui corner label" href="http://wikistream.wmflabs.org/">
 					<i class="mail forward icon"></i>
@@ -177,7 +176,26 @@ a.label {
 			</div>
 		
 		</div>
+		<div  class="item">
+			<div class="image">
+				<a class="like ui corner label" href="http://sepans.com/wikistalker/">
+					<i class="mail forward icon"></i>
+				</a>
+				<img src="viz/wikistalker.png">
+			</div>
+			<div class="content">
+				<a class="name" href="http://sepans.com/wikistalker/">Wikistalker</a>
+				<p class="description">"Wikistalker, inspired by ‘Web Stalker‘, is a way of understanding a concept by only seeing the visualization of the meta-structure of its Wikipedia article."</p>
+
+				<div class="more description">
+					<ul>
+						<li>By <a href="http://sepans.com/">sepans</a>, <a href="http://raschin.com/">raschin</a>.</li>
+						<li><a href="http://sepans.com/wikistalker/">http://sepans.com/wikistalker/</a></li>
+					</ul>
+				</div>
+			</div>
 		
+		</div>
 	</div>
 	<div class="ui clearing"></div>
 	
