--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@ a.label {
 				<img src="viz/notabilia.png">
 			</div>
 			<div class="content">
-				<a class="name" href="https://meta.wikimedia.org/wiki/Research:Data">Notabilia</a>
+				<a class="name" href="http://notabilia.net/">Notabilia</a>
 				<p class="description">"We analyzed and visualized Article for Deletion (AfD) discussions in the English Wikipedia. The visualization above represents the 100 longest discussions that resulted in the deletion of the respective article. " </p>
 				<div class="more description">
 					<ul>
