should probably autogenerate or not track index.html :P

--- a/static/index.htm
+++ b/static/index.htm
@@ -112,7 +112,7 @@ a.label {
 <body class="items">
 	<div class="head">
 		<h1 class="ui header">See, also
-			<div class="sub header">A collection of visualization projects built on <a href="https://meta.wikimedia.org/wiki/Research:Data">Wikipedia data</a>.
+			<div class="sub header">A collection of visualization projects built on <a href="https://meta.wikimedia.org/wiki/Research:Data">Wikipedia data</a>, curated by <a href="//blog.hatnote.com">Hatnote</a>.
 </div>
 		</h1>
 	</div>
@@ -387,7 +387,8 @@ a.label {
 			<div class="ui clearing"></div>
 			<h2 class="ui header">About</h2>
 			<div class="ui clearing divider"></div>
-				<p>This is a  collection of our favorite projects built on open data from Wikipedia and other Wikimedia projects. Source code and more details <a href="http://github.com/hatnote">available on Github</a>.</p> <p>If you know other cool Wikipedia-based projects, please <a href="http://blog.hatnote.com/ask">submit a link</a>.</p>
+				
+<p>This is a collection of <a href="//blog.hatnote.com">our</a> favorite projects built on open data from Wikipedia and other Wikimedia projects. Source code and more details <a href="http://github.com/hatnote">available on Github</a>.</p> <p>If you know other cool Wikipedia-based projects, please <a href="//blog.hatnote.com/ask">submit a link</a>.</p>
 
 			</div>
 
